Fix vertical alignment around ETMobile image

--- a/app/assets/stylesheets/pages/root.sass
+++ b/app/assets/stylesheets/pages/root.sass
@@ -29,14 +29,21 @@ body#pages_root
       max-width: 330px
       margin: 0 auto 50px
       border-radius: 3px
-      box-shadow: 0 2px 14px rgba(0, 0, 0, 0.2)
-      border: 1px solid rgba(0, 0, 0, 0.2)
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2)
+      border: 1px solid rgba(0, 0, 0, 0.15)
       border-top: 1px solid rgba(0, 0, 0, 0.15)
       overflow: hidden
+      background-color: #dedede
       background-clip: padding-box
 
-    .mobile-holder img
-      margin: 1px auto 51px
+    .mobile-holder
+      background: image-url("pages/root/mobile_background.png") 0 1px no-repeat
+      background-size: 100% auto
+      margin: 0 auto
+      padding-bottom: 34px
+
+      img
+        margin: 0 auto
 
     img
       display: block
