--- a/app/assets/stylesheets/responsive/large_desktop.sass
+++ b/app/assets/stylesheets/responsive/large_desktop.sass
@@ -13,6 +13,9 @@ body#pages_root h1 + p
   background-position: 6px 5px
   background-size: 26px 6px
   background-repeat: no-repeat
-  background-color: #dedede
   padding-top: 16px
   border-radius: 3px
+
+#products .product .mobile-holder
+  margin-top: 2px
+  padding-bottom: 37px
