--- a/app/assets/stylesheets/responsive/phones.sass
+++ b/app/assets/stylesheets/responsive/phones.sass
@@ -6,6 +6,9 @@
 body#pages_root
   background-image: image-url('pages/root/sky.png')
 
-body#pages_root h1 + p
-  padding-left: 0
-  padding-right: 0
+  h1 + p
+    padding-left: 0
+    padding-right: 0
+
+  #products .product .mobile-holder
+    max-width: 315px
